# models/Category.js
@@ -1,0 +1,12 @@
+const mongoose = require('mongoose');
+
+const categorySchema = new mongoose.Schema({
+    name: {
+        type: String,
+        required: true,
+        unique: true,
+        minlength: 3
+    }
+})
+
+module.exports = mongoose.model('Category', categorySchema)
